[package]
name = "redis_by_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"

[[examples]]
name = "hello-redis"
path = "examples/hello-redis.rs"

[[examples]]
name = "sync-read"
path = "examples/sync-read.rs"
